Agregando estilos a las cards

--- a/root/css/style.css
+++ b/root/css/style.css
@@ -16,6 +16,7 @@ html {
     display: flex;
     height: 50px;
     justify-content: space-between;
+    padding: 0 100px;
 }
 
 #nav-menu-superior h3{
@@ -38,6 +39,7 @@ nav ul li {
     display: flex;
     height: 80px;
     justify-content: space-between;
+    padding: 0 50px;
 }
 
 #nav-menu-inferior ul {
@@ -64,10 +66,23 @@ nav ul li {
     align-items: center;
     display: flex;
     flex-direction: column;
-    font-size: 70px;
     position: absolute;
     right: 100px;
     top: 400px;
+}
+
+.informacion-banner div p:nth-child(1){
+    background-color: #fff;
+    border-radius: 5px;
+    color: #3C2313;
+    font-size: 70px;
+    padding: 10px;
+}
+
+.informacion-banner div p:nth-child(2) {
+    color: #3C2313;
+    font-size: 40px;
+    padding: 20px;
 }
 
 #buttom-comederos {
@@ -75,8 +90,9 @@ nav ul li {
     border-radius: 5px;
     border-style: none;
     color: #fff;
-    height: 49px;
-    width: 141px;
+    font-size: 25px;
+    height: 80px;
+    width: 300px;
 }
 
 main {
@@ -89,6 +105,13 @@ h1 {
     font-size: 300%;
 }
 
+#patita{
+    color: #F0A83E;
+    font-size: 70px;
+    padding: 30px;
+    text-align: center;
+}
+
 .productos-destacados {
     align-items: center;
     display: flex;
@@ -98,33 +121,65 @@ h1 {
 #menu-productos-destacados {
     color: #666666;
     display: flex;
+    list-style: none;
+    padding: 30px;
 }
 
-h2 {
-    color: #3C2313;
-    text-align: center;
+#menu-productos-destacados li {
+    padding-left: 30px;
+}
+
+#menu-productos-destacados i {
+    font-size: 5%;
 }
 
 .cards {
     display: flex;
     justify-content: center;
+    margin: 50px;
+}
+
+.cards article {
+    background-color: #FBFAF6;
+    display: flex;
+    flex-direction: column;
+    height: 642px;
+    margin: 15px;
+    width: 526px;
+}
+
+.cards h2, .cards p {
+    font-size: 150%;
+    padding: 5px;
 }
 
 .contactanos {
     align-items: center;
     display: flex;
     flex-direction: column;
+    padding-top: 30px;
+}
+
+h2 {
+    color: #3C2313;
+    font-size: 220%;
+    padding-bottom: 30px;
+    text-align: center;
 }
 
 .form-contactanos {
+    align-items: center;
     display: flex;
     flex-direction: column;
-    width: 340px;
+    height: 430px;
+    justify-content: space-around;
 }
 
 .form-contactanos input {
-    height: 40px;
-    width: 340px;
+    font-size: 110%;
+    height: 80px;
+    padding-left: 20px;
+    width: 600px;
 }
 
 form input, #buttom-suscribirme {
@@ -133,9 +188,11 @@ form input, #buttom-suscribirme {
     color: #fff;
 }
 
-.ubicacion {
-    background-color: #3C2313;
-    color: #fff;
+#form-contactanos-btn-contenedor {
+    display: flex;
+    justify-content: space-around;
+    padding: 30px;
+    width: 320px;
 }
 
 #buttom-resetear {
@@ -143,8 +200,9 @@ form input, #buttom-suscribirme {
     border-radius: 15px;
     border-style: none;
     color: #fff;
-    height: 34px;
-    width: 110px;
+    font-size: 120%;
+    height: 44px;
+    width: 120px;
 }
 
 #buttom-enviar {
@@ -152,23 +210,22 @@ form input, #buttom-suscribirme {
     border-radius: 15px;
     border-style: none;
     color: #fff;
-    height: 34px;
-    width: 110px;
-}
-
-#form-contactanos-btn-contenedor {
-    display: flex;
-    justify-content: center;
+    font-size: 120%;
+    height: 44px;
+    width: 120px;
 }
 
 .suscribirme {
+    align-items: center;
     background-color: #F0A83E;
     color: #fff;
     display: flex;
+    height: 80px;
     justify-content: space-between;
+    padding: 0 100px;
 }
 
-#patita, .cards p {
+.cards p {
     color: #F0A83E;
     text-align: center;
 }
@@ -180,6 +237,8 @@ form input, #buttom-suscribirme {
 
 .ubicacion {
     align-items: center;
+    background-color: #3C2313;
+    color: #fff;
     display: flex;
     justify-content: space-between;
 }
